--- a/WebContent/assets/style.css
+++ b/WebContent/assets/style.css
@@ -187,3 +187,15 @@ top: 615px; */
 	margin: 50px 0px 0px;
 	border-radius: 2rem;
 }
+.footer-text{
+	   display:flex;
+    flex-direction: row;
+    align-content: flex-end;
+	position: absolute;
+	    margin: 275px 0px 0px 80px;
+	
+	font-size: 18px;
+	font-family: Ubuntu;
+	font-style: normal;
+	z-index:9;
+}
